# RadarUpperComputer

./: README.md
Continental-ARS548/: 11.sh  README.md
Continental-ARS548/include/ars548_msg/: AccelerationLateralCog.h  AccelerationLongitudinalCog.h  CharacteristicSpeed.h  DetectionList.h  DrivingDirection.h  ObjectList.h  RadarBasicStatus.h  SteeringAngleFrontAxle.h  VelocityVehicle.h  YawRate.h  detections.h  objects.h
Continental-ARS548/src/ars548_msg/: CMakeLists.txt
Continental-ARS548/src/ars548_process/: CMakeLists.txt
Continental-ARS548/src/ars548_process/launch/: ars548.rviz  ars548_display.rviz  vis_ars548.launch
Continental-ARS548/src/ars548_process/scripts/: udp_receiver.py
Continental-ARS548/src/ars548_process/src/: ars548_process_node (copy).cpp  ars548_process_node.cpp  info_convert_node.cpp  info_convert_node1.cpp  udp_interface.cpp
NANORADAR-SR75/: README.md
NANORADAR-SR75/rviz/: default.rviz
NANORADAR-SR75/src/ros_can/: CMakeLists.txt  package.xml
NANORADAR-SR75/src/ros_can/include/: canfd.h  config.h  controlcanfd.h
NANORADAR-SR75/src/ros_can/launch/: can.launch
NANORADAR-SR75/src/ros_can/src/: filter_v.cpp  filter_v1.cpp  filter_v2.cpp  filter_v3.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  plane_dis.cpp
ti-iwr6843isk/: README.md  high_6843.cfg  mmw_HighAccu.js  readData_IWR6843ISK_DEPRECIATED.py
